# mainbranch

./: .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  SUPPORT.md  conductor-preferences.md
.claude/: announcements.md
.claude/context/compliance/: README.md
.claude/context/compliance/typicality/: README.md
.claude/educational/: cloudflare-vs-vercel.md  github-vs-gdocs.md  upgrading-mainbranch.md
.claude/lenses/: README.md  copy-quality.md  ftc-compliance.md  meta-policy.md  substantiation.md  visual-standards.md  voice-authenticity.md
.claude/playbooks/ship-bet/: SKILL.md
.claude/playbooks/weekly-review/: SKILL.md
.claude/reference/: minisite.md  pull-engine-updates.md
.claude/reference/compliance/: angle-playbook.md  ftc-scrutiny-categories.md  testimonial-decision-rubric.md
.claude/reference/compliance/typicality/: README.md
.claude/reference/domain-rubrics/: community.md  ecommerce.md  multi-offer.md
.claude/scripts/: decision_lifecycle_audit.sh  test-decision-lifecycle-wiring.sh
.claude/skills/ad-review/: SKILL.md
.claude/skills/ad-static/: SKILL.md
.claude/skills/ad-static/references/: output-template.md
.claude/skills/ad-video-scripts/: SKILL.md
.claude/skills/ad-video-scripts/references/: templates-hooks.md
.claude/skills/ads/: SKILL.md
.claude/skills/b2b-killer-vsl/: SKILL.md
.claude/skills/changelog/: SKILL.md
.claude/skills/content/: SKILL.md
.claude/skills/deck/: SKILL.md  html2pptx.md  ooxml.md
.claude/skills/end/: SKILL.md
.claude/skills/enrich/: SKILL.md
.claude/skills/help/: SKILL.md
.claude/skills/organic/: SKILL.md
.claude/skills/origin/: SKILL.md
.claude/skills/pull/: SKILL.md
.claude/skills/repo-setup/: SKILL.md
.claude/skills/setup/: SKILL.md
.claude/skills/site/: SKILL.md
.claude/skills/skill-brief-draft/: SKILL.md
.claude/skills/skill-concept/: SKILL.md
.claude/skills/skill-review/: SKILL.md
.claude/skills/skool-manager/: SKILL.md
.claude/skills/skool-vsl-scripts/: SKILL.md
.claude/skills/start/: SKILL.md
.claude/skills/tests/: skill-regression-tests.sh
.claude/skills/think/: SKILL.md
.claude/skills/vsl/: SKILL.md
.claude/skills/wiki/: SKILL.md
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug.yml  config.yml  feature.yml  question.yml
.github/workflows/: ci.yml  publish-pypi.yml
agents/: README.md
commands/: README.md
decisions/: 2026-01-23-wiki-skill-improvements.md  2026-04-29-mb-vip-v0-1-0-master.md  2026-05-01-mb-cli-vs-agent-workflows-boundary.md  2026-05-02-github-native-business-os.md  2026-05-03-skill-distribution-and-migration.md
docs/: BEGINNER-SETUP.md  MIGRATING.md  OSS-OPERATING-CHECKLIST.md  compatibility.md  deck-skill-setup.md  onboarding-progress.md  philosophy.md  system-architecture.md
docs/prd/: v0-2-agent-workflow-and-evals.md  v0-2-first-run-daily-briefing.md
docs/reports/: 2026-05-03-mb-connect-dogfood.md
mb/: .gitignore  LICENSE  README.md  pyproject.toml  setup.py
mb/mb/: __init__.py  __main__.py  ads_compliance_gate.py  cli.py  connect.py  doctor.py  educational.py  engine.py  freshness.py  github_activity.py  graph.py  init.py  migrate.py  onboard.py  resolve.py  skill_validate.py  start.py  status.py  think.py  update.py  validate.py
mb/mb/_data/educational/: anti-cloud-backup.md  upgrading-mainbranch.md
mb/mb/_data/fixtures/acme-brewing/: CLAUDE.md
mb/mb/_data/fixtures/acme-brewing/core/: offer.md
mb/mb/_data/fixtures/acme-brewing/decisions/: 2026-04-29-launch-flagship.md
mb/mb/_data/fixtures/acme-brewing/research/: 2026-04-20-craft-beer-trends.md
mb/mb/_data/stubs/: audience.md  offer.md  soul.md  voice.md
mb/mb/_data/templates/: .gitignore.tmpl  CLAUDE.md.tmpl  CODEOWNERS.tmpl
mb/mb/migrations/: 001_v01_to_v02_path_config.py  __init__.py  base.py
mb/tests/: conftest.py  test_ads_compliance_gate.py  test_cli.py  test_connect.py  test_doctor.py  test_freshness.py  test_graph.py  test_init.py  test_migrate.py  test_onboard.py  test_resolve.py  test_skill_validate.py  test_smoke_coverage.py  test_start.py  test_status.py  test_update.py  test_validate.py
mb/tests/fixtures/ads/: compliance-findings.json  unsafe-batch.md
research/: 2026-01-23-wiki-skill-improvements-mining.md
scripts/: check.sh  test-ads-v2.md
templates/core/: CLAUDE.md
templates/core/decisions/: README.md
templates/core/processes/: README.md
templates/core/research/: README.md
templates/core/solved/: README.md
templates/modules/: brand-style-template.md
templates/modules/business-repo-scaffold/: CLAUDE.md  README.md
templates/modules/marketing/: README.md  audience.md  campaign-tracker.md  language-bank.md  offer.md  psychographic.md
tools/tool-dns/: README.md  SKILL.md
tools/tool-domain/: README.md  SKILL.md
tools/tool-og-render/: README.md  SKILL.md  wrapper.py
tools/tool-pages/: README.md  SKILL.md
tools/tool-stripe/: README.md  SKILL.md
(+176 files in other folders)
